add onesignal SDK

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SEWF2019 - Image Server</title>
+    <script
+      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
+      async=""
+    ></script>
+    <script>
+      var OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "cbb4b910-2b2b-440c-b472-9320f131e0d2"
+        });
+      });
+    </script>
   </head>
   <body>
     <h1>SEWF2019 Image Server</h1>
